se corrige margin linea 57

--- a/Ejercicios/clase-3/assets/style-3.1.css
+++ b/Ejercicios/clase-3/assets/style-3.1.css
@@ -54,7 +54,7 @@ aside {
     padding-left: 0.5rem;
     float: left;
     height: 30vh;
-    margin: none;
+    margin: 0;
     border-right: 1.5px solid black;
 }
 
